--- a/css/base.css
+++ b/css/base.css
@@ -1,14 +1,14 @@
 html, body {
   scroll-behavior: smooth;
-  color: #333;
+  color: #fff;
   letter-spacing: 0.1rem;
   line-height: 1.7;
   -webkit-font-feature-settings: "palt";
   -webkit-text-size-adjust: 100%;
   font-feature-settings: "palt";
-  font-family: 'Sawarabi Mincho', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 12px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
@@ -17,6 +17,7 @@ html, body {
   padding: 0; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #000; }
 
 /*# sourceMappingURL=base.css.map */
