--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
-@charset "UTF-8";
 html, body {
   scroll-behavior: smooth;
-  color: #333;
+  color: #fff;
   letter-spacing: 0.1rem;
   line-height: 1.7;
   -webkit-font-feature-settings: "palt";
   -webkit-text-size-adjust: 100%;
   font-feature-settings: "palt";
-  font-family: 'Sawarabi Mincho', sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 12px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
@@ -18,19 +17,19 @@ html, body {
   padding: 0; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #000; }
 
 body {
   width: 100%;
-  background-image: url("../image/S__117366799.jpg");
+  height: 100vh;
+  background-image: url("../img 2/sp_bg.jpg");
   background-size: cover;
-  background-color: rgba(255, 255, 255, 0.7);
   background-blend-mode: lighten;
   background-repeat: no-repeat;
   background-position: center; }
 
 .info-header {
-  background-color: rgba(228, 228, 228, 0.6);
   padding: 1rem 0; }
   .info-header__container {
     text-align: center; }
@@ -38,8 +37,7 @@ body {
       font-size: 5vw; }
 
 .header {
-  background-color: rgba(228, 228, 228, 0.6);
-  padding: 1rem 0; }
+  padding: 0.8rem 0.8rem; }
   .header__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -47,41 +45,49 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -ms-flex-pack: distribute;
-        justify-content: space-around; }
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
     .header__container h1 {
-      font-size: 3.5rem; }
-      @media screen and (max-width: 1000px) {
+      font-size: 1.2rem; }
+      @media screen and (min-width: 540px) {
         .header__container h1 {
           font-size: 3rem; } }
-    .header__container__hamburger span {
-      content: "";
-      top: 5%;
-      right: 5%;
-      content: "";
-      width: 40px;
-      height: 4px;
-      background-color: #0097A7;
-      position: fixed; }
-      .header__container__hamburger span::before {
+    .header__container__hamburger {
+      border: none;
+      position: fixed;
+      width: 30px;
+      height: 17px;
+      right: 20px;
+      top: 12px;
+      cursor: pointer;
+      background-color: #0ab8b7; }
+      .header__container__hamburger span {
+        top: 0px;
         content: "";
-        top: 6%;
-        right: 5%;
-        content: "";
-        width: 40px;
-        height: 4px;
-        background-color: #0097A7;
-        position: fixed; }
-      .header__container__hamburger span::after {
-        content: "";
-        top: 7%;
-        right: 5%;
-        content: "";
-        width: 40px;
-        height: 4px;
-        background-color: #0097A7;
-        position: fixed; }
+        right: 0;
+        width: 30px;
+        height: 3px;
+        background-color: #fff;
+        position: absolute; }
+        .header__container__hamburger span::before {
+          top: 7px;
+          content: "";
+          right: 0;
+          width: 30px;
+          height: 3px;
+          background-color: #fff;
+          position: absolute; }
+        .header__container__hamburger span::after {
+          top: 14px;
+          content: "";
+          right: 0;
+          width: 30px;
+          height: 3px;
+          background-color: #fff;
+          position: absolute; }
     .header__container ul {
+      color: #000;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -91,23 +97,36 @@ body {
               flex-direction: column;
       text-align: center;
       list-style: none; }
+      .header__container ul .welcom {
+        padding-top: 4rem; }
+      .header__container ul :nth-child(4) {
+        font-size: 1.5rem;
+        margin-top: 11rem;
+        color: red;
+        cursor: pointer; }
       .header__container ul li {
+        padding-top: 1rem;
         font-size: 0.5vw; }
-        .header__container ul li a {
-          color: #000; }
         .header__container ul li a:hover {
           color: red;
           -webkit-transition: 0.4s;
           transition: 0.4s; }
+    .header__container .hide {
+      position: fixed;
+      top: 0px;
+      right: -200px; }
+    .header__container .show {
+      position: fixed;
+      top: 0px;
+      right: 0px;
+      width: 100px;
+      height: 100%;
+      background-color: white;
+      -webkit-box-shadow: 0 -2px 14px rgba(0, 0, 0, 0.3);
+              box-shadow: 0 -2px 14px rgba(0, 0, 0, 0.3); }
 
 .info-main {
-  width: 100%;
-  margin-top: 2rem;
-  margin-bottom: 5rem; }
-  @media screen and (min-width: 1001px) {
-    .info-main {
-      width: 1024px;
-      margin: 3rem auto 5rem; } }
+  width: 100%; }
   .info-main__container {
     width: 100%;
     display: -webkit-box;
@@ -123,21 +142,12 @@ body {
     .info-main__container__title {
       margin-bottom: 1rem;
       font-size: 7vw; }
-      @media screen and (min-width: 1001px) {
-        .info-main__container__title {
-          font-size: 5rem; } }
     .info-main__container__subTitle {
       font-size: 4vw;
       margin-bottom: 3rem; }
-      @media screen and (min-width: 1001px) {
-        .info-main__container__subTitle {
-          font-size: 2rem; } }
     .info-main__container__form {
       text-align: center;
       width: 70%; }
-      @media screen and (min-width: 1001px) {
-        .info-main__container__form {
-          width: 98%; } }
       .info-main__container__form li {
         list-style: none;
         display: -webkit-box;
@@ -183,7 +193,7 @@ body {
       color: red;
       font-size: 1vw;
       font-weight: bold; }
-      @media screen and (max-width: 1000px) {
+      @media screen and (min-width: 540px) {
         .info-main__container .error {
           font-size: 2.8vw; } }
       @media screen and (min-width: 1001px) {
@@ -191,75 +201,88 @@ body {
           font-size: 1.5rem; } }
 
 .index-main {
-  width: 100%;
-  height: 600px;
-  margin-top: 5rem; }
+  width: 100%; }
+  .index-main__trouble {
+    padding: 0 1rem; }
+    .index-main__trouble__title {
+      margin-top: 7rem;
+      font-size: 2.5rem; }
+    .index-main__trouble__contents {
+      margin-top: 3rem;
+      text-align: center; }
   .index-main__search {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    display: block;
-    width: 200px;
-    height: 100px;
-    text-align: center;
-    margin: 5rem auto 3rem;
-    font-size: 2rem;
-    color: #fff;
-    font-weight: lighter;
-    line-height: 100px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 150px; }
-    .index-main__search:hover {
-      background-color: rgba(0, 0, 0, 0.8);
-      -webkit-transition: 0.2s;
-      transition: 0.2s; }
-  .index-main .select {
-    margin: 6rem 0 3rem 12rem; }
-    .index-main .select p {
-      font-family: "MS Pゴシック";
+    position: fixed;
+    top: 50%;
+    left: 10%;
+    width: 80%;
+    z-index: -1; }
+    .index-main__search__induction {
+      text-align: center; }
+    .index-main__search__button {
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
+      display: block;
+      height: 60px;
+      text-align: center;
+      margin: 0 auto;
+      font-size: 1.6rem;
       font-weight: bold;
-      font-size: 3rem;
-      color: blue; }
-    .index-main .select__container {
+      color: #000;
+      line-height: 60px;
+      background-color: #fce300;
+      border-radius: 150px; }
+      .index-main__search__button:hover {
+        background-color: rgba(255, 238, 0, 0.5);
+        -webkit-transition: 0.2s;
+        transition: 0.2s; }
+
+.select-main .select {
+  margin: 6rem 0 3rem 12rem; }
+  .select-main .select p {
+    font-weight: bold;
+    font-size: 3rem;
+    color: blue; }
+  .select-main .select__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .select-main .select__container__box {
+      width: 230px;
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; }
-      .index-main .select__container__box {
-        width: 230px;
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        font-size: 2rem;
-        font-weight: bold;
-        margin-left: 10rem;
-        line-height: 5rem; }
-        .index-main .select__container__box input {
-          width: 1.5rem;
-          height: 1.5rem;
-          margin-right: 1rem; }
-  .index-main .next {
-    position: relative;
-    top: 30rem;
-    left: 8rem;
-    font-size: 2rem;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    width: 160px;
-    height: 80px;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    cursor: pointer; }
-  .index-main .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-    -webkit-transition: 0.2s;
-    transition: 0.2s; }
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      font-size: 2rem;
+      font-weight: bold;
+      margin-left: 10rem;
+      line-height: 5rem; }
+      .select-main .select__container__box input {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-right: 1rem; }
+.select-main .next {
+  position: relative;
+  top: 30rem;
+  left: 8rem;
+  font-size: 2rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  width: 160px;
+  height: 80px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer; }
+.select-main .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
 
 footer {
   height: 70px;
