--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body {
       right: -200px; }
     .header__container .show {
       position: fixed;
+      z-index: 10;
       top: 0px;
       right: 0px;
       width: 100px;
@@ -201,21 +202,25 @@ body {
           font-size: 1.5rem; } }
 
 .index-main {
-  width: 100%; }
+  width: 100%;
+  position: fixed;
+  top: 10%; }
   .index-main__trouble {
     padding: 0 1rem; }
     .index-main__trouble__title {
-      margin-top: 7rem;
-      font-size: 2.5rem; }
+      font-size: 8vw; }
+    .index-main__trouble__explanation {
+      margin-top: 4%;
+      font-size: 3vw; }
     .index-main__trouble__contents {
-      margin-top: 3rem;
+      margin-top: 10%;
+      font-size: 4vw;
       text-align: center; }
   .index-main__search {
     position: fixed;
     top: 50%;
     left: 10%;
-    width: 80%;
-    z-index: -1; }
+    width: 80%; }
     .index-main__search__induction {
       text-align: center; }
     .index-main__search__button {
