--- a/css/style.css
+++ b/css/style.css
@@ -244,51 +244,36 @@ body {
         -webkit-transition: 0.2s;
         transition: 0.2s; }
 
-.select-main .select {
-  margin: 6rem 0 3rem 12rem; }
-  .select-main .select p {
-    font-weight: bold;
-    font-size: 3rem;
-    color: blue; }
-  .select-main .select__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .select-main .select__container__box {
-      width: 230px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-          -ms-flex-direction: column;
-              flex-direction: column;
-      font-size: 2rem;
-      font-weight: bold;
-      margin-left: 10rem;
-      line-height: 5rem; }
-      .select-main .select__container__box input {
-        width: 1.5rem;
-        height: 1.5rem;
-        margin-right: 1rem; }
-.select-main .next {
-  position: relative;
-  top: 30rem;
-  left: 8rem;
-  font-size: 2rem;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: #fff;
-  width: 160px;
-  height: 80px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  cursor: pointer; }
-.select-main .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  -webkit-transition: 0.2s;
-  transition: 0.2s; }
+.select-main {
+  background-color: #204b37;
+  color: #000;
+  margin: 1rem;
+  padding: 1.5rem;
+  -webkit-box-shadow: 0 0 5px #000;
+          box-shadow: 0 0 5px #000; }
+  .select-main__container {
+    background-color: #fff;
+    -webkit-box-shadow: 0 0 8px #000;
+            box-shadow: 0 0 8px #000; }
+
+.result-main {
+  background-color: #0ab8b7 !important;
+  height: 100vh; }
+
+.slider {
+  width: 80%;
+  margin: 0 auto; }
+  .slider .oneCar {
+    width: 100%;
+    text-align: center; }
+    .slider .oneCar ul {
+      list-style: none; }
+    .slider .oneCar img {
+      width: 200px;
+      margin: 0 auto; }
+  .slider .slick-prev::before,
+  .slider .slick-next::before {
+    color: black !important; }
 
 footer {
   height: 70px;
