--- a/css/style.scss
+++ b/css/style.scss
@@ -1,10 +1,11 @@
-@import 'base.scss';
+@import "base.scss";
 
 body {
   width: 100%;
   height: 100vh;
   background-image: url("../img 2/sp_bg.jpg");
-  background-size: cover;  background-blend-mode:lighten;
+  background-size: cover;
+  background-blend-mode: lighten;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -32,7 +33,7 @@ body {
     justify-content: space-between;
     h1 {
       font-size: 1.2rem;
-      @include tab-layout(){
+      @include tab-layout() {
         font-size: 3rem;
       }
     }
@@ -44,7 +45,7 @@ body {
       right: 20px;
       top: 12px;
       cursor: pointer;
-      background-color: rgb(10,184,183);
+      background-color: rgb(10, 184, 183);
       span {
         top: 0px;
         @include three-line;
@@ -96,7 +97,7 @@ body {
       width: 110px;
       height: 100%;
       background-color: rgb(255, 255, 255);
-      box-shadow: 0 -2px 14px rgba(0,0,0,0.3);
+      box-shadow: 0 -2px 14px rgba(0, 0, 0, 0.3);
     }
   }
 }
@@ -126,27 +127,27 @@ body {
         list-style: none;
         display: flex;
         flex-direction: column;
-        @include pc-layout(){
+        @include pc-layout() {
           flex-direction: row;
           margin-top: 2rem;
         }
         label {
           margin-top: 2rem;
-          @include pc-layout(){
+          @include pc-layout() {
             width: 35%;
             margin-top: 0;
             text-align: right;
           }
         }
         input {
-          @include pc-layout(){
+          @include pc-layout() {
             width: 60%;
           }
         }
       }
       .user-info {
         font-size: 6vw;
-        @include pc-layout(){
+        @include pc-layout() {
           font-size: 2rem;
         }
       }
@@ -156,7 +157,7 @@ body {
         width: 50%;
         margin-top: 3rem;
         padding: 0.5rem;
-        @include pc-layout(){
+        @include pc-layout() {
           font-size: 2rem;
           width: 30%;
         }
@@ -166,10 +167,10 @@ body {
       color: red;
       font-size: 1vw;
       font-weight: bold;
-      @include tab-layout(){
+      @include tab-layout() {
         font-size: 2.8vw;
       }
-      @include pc-layout(){
+      @include pc-layout() {
         font-size: 1.5rem;
       }
     }
@@ -205,7 +206,7 @@ body {
     &__induction {
       text-align: center;
     }
-    &__button{
+    &__button {
       user-select: none;
       display: block;
       height: 60px;
@@ -229,63 +230,54 @@ body {
 // select.php
 // ================================
 .select-main {
-  .select {
-    margin: 6rem 0 3rem 12rem;
-    p {
-      font-weight: bold;
-      font-size: 3rem;
-      color: blue;
-    }
-    &__container {
-      display: flex;
-      &__box {
-        width: 230px;
-        display: flex;
-        flex-direction: column;
-        font-size: 2rem;
-        font-weight: bold;
-        margin-left: 10rem;
-        line-height: 5rem;
-        input {
-          width: 1.5rem;
-          height: 1.5rem;
-          margin-right: 1rem;
-        }
+  background-color: rgb(32, 75, 55);
+  color: $sub-color;
+  margin: 1rem;
+  padding: 1.5rem;
+  box-shadow: 0 0 5px #000;
+  &__container {
+    background-color: $main-color;
+    box-shadow: 0 0 8px #000;
+    &__box {
+      &__item {
       }
     }
   }
-
-  .next {
-    position: relative;
-    top: 30rem;
-    left: 8rem;
-    font-size: 2rem;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    width: 160px;
-    height: 80px;
-    user-select: none;
-    cursor: pointer;
-  }
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-    transition: 0.2s;
-  }
 }
-
 
 // ================================
 // result.php
 // ================================
+.result-main {
+  background-color: rgb(10,184,183)!important;
+  height: 100vh;
+}
 
+.slider {
+  width: 80%;
+  margin: 0 auto;
+  .oneCar {
+    width: 100%;
+    text-align: center;
+    ul {
+      list-style: none;
+    }
+    img {
+      width: 200px;
+      margin: 0 auto;
+    }
+  }
+  .slick-prev::before,
+  .slick-next::before {
+    color: black !important;
+  }
+}
 
 // ================================
 // about.php
 // ================================
 .about-main {
-
 }
-
 
 // ================================
 // フッター
@@ -297,7 +289,7 @@ footer {
   font-weight: bold;
   text-align: center;
   letter-spacing: 1rem;
-  @include pc-layout(){
+  @include pc-layout() {
     font-size: 2rem;
   }
 }
