--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
   text-decoration: none;
   color: #000; }
 
-body {
+.body {
   width: 100%;
   height: 100vh;
   background-image: url("../img 2/sp_bg.jpg");
@@ -28,6 +28,9 @@ body {
   background-blend-mode: lighten;
   background-repeat: no-repeat;
   background-position: center; }
+
+.result-body {
+  background-color: #0ab8b7 !important; }
 
 .info-header {
   padding: 1rem 0; }
@@ -257,23 +260,42 @@ body {
             box-shadow: 0 0 8px #000; }
 
 .result-main {
-  background-color: #0ab8b7 !important;
-  height: 100vh; }
-
-.slider {
-  width: 80%;
-  margin: 0 auto; }
-  .slider .oneCar {
-    width: 100%;
-    text-align: center; }
-    .slider .oneCar ul {
-      list-style: none; }
-    .slider .oneCar img {
-      width: 200px;
-      margin: 0 auto; }
-  .slider .slick-prev::before,
-  .slider .slick-next::before {
-    color: black !important; }
+  height: 100vh;
+  margin-top: 2rem;
+  text-align: center; }
+  .result-main .slider {
+    width: 80%;
+    margin: 0 auto; }
+    .result-main .slider .oneCar {
+      width: 100%; }
+      .result-main .slider .oneCar ul {
+        list-style: none; }
+      .result-main .slider .oneCar img {
+        width: 200px;
+        margin: 0 auto; }
+    .result-main .slider .slick-prev::before,
+    .result-main .slider .slick-next::before {
+      color: black !important; }
+  .result-main .search {
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    display: block;
+    width: 80%;
+    height: 40px;
+    text-align: center;
+    margin: 5rem auto;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #000;
+    line-height: 40px;
+    background-color: #fce300;
+    border-radius: 150px; }
+    .result-main .search:hover {
+      background-color: rgba(255, 238, 0, 0.9);
+      -webkit-transition: 0.2s;
+      transition: 0.2s; }
 
 footer {
   height: 70px;
