--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,19 @@ a {
   background-color: #0ab8b7 !important; }
 
 .info-header {
+  background-color: #078080;
   padding: 1rem 0; }
   .info-header__container {
     text-align: center; }
     .info-header__container h1 {
+      letter-spacing: 0.5rem;
       font-size: 5vw; }
+    .info-header__container .header-link {
+      color: #fff !important; }
 
 .header {
-  padding: 0.8rem 0.8rem; }
+  padding: 0.8rem 0.8rem;
+  background-color: #078080; }
   .header__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -52,10 +57,13 @@ a {
         -ms-flex-pack: justify;
             justify-content: space-between; }
     .header__container h1 {
-      font-size: 1.2rem; }
+      font-size: 5vw;
+      letter-spacing: 0.5rem; }
       @media screen and (min-width: 540px) {
         .header__container h1 {
           font-size: 3rem; } }
+    .header__container .header-link {
+      color: #fff !important; }
     .header__container__hamburger {
       border: none;
       position: fixed;
@@ -64,7 +72,7 @@ a {
       right: 20px;
       top: 12px;
       cursor: pointer;
-      background-color: #0ab8b7; }
+      background-color: #078080; }
       .header__container__hamburger span {
         top: 0px;
         content: "";
@@ -102,9 +110,9 @@ a {
       list-style: none; }
       .header__container ul .welcom {
         padding-top: 4rem; }
-      .header__container ul :nth-child(6) {
+      .header__container ul :nth-child(5) {
         font-size: 1.5rem;
-        margin-top: 11rem;
+        margin-top: 10rem;
         padding-bottom: 2rem;
         color: red;
         cursor: pointer; }
@@ -145,11 +153,11 @@ a {
         -ms-flex-align: center;
             align-items: center; }
     .info-main__container__title {
+      margin-top: 3rem;
       margin-bottom: 1rem;
       font-size: 7vw; }
     .info-main__container__subTitle {
-      font-size: 4vw;
-      margin-bottom: 3rem; }
+      font-size: 4vw; }
     .info-main__container__form {
       text-align: center;
       width: 70%; }
@@ -168,9 +176,9 @@ a {
             -webkit-box-direction: normal;
                 -ms-flex-direction: row;
                     flex-direction: row;
-            margin-top: 2rem; } }
+            margin-top: 1rem; } }
         .info-main__container__form li label {
-          margin-top: 2rem; }
+          margin-top: 1rem; }
           @media screen and (min-width: 1001px) {
             .info-main__container__form li label {
               width: 35%;
@@ -187,8 +195,8 @@ a {
       .info-main__container__form__button {
         letter-spacing: 3px;
         font-size: 4vw;
-        width: 50%;
-        margin-top: 3rem;
+        width: 45%;
+        margin-top: 1rem;
         padding: 0.5rem; }
         @media screen and (min-width: 1001px) {
           .info-main__container__form__button {
@@ -208,8 +216,10 @@ a {
 .index-main {
   width: 100%;
   position: fixed;
-  top: 10%; }
+  top: 10%;
+  text-align: center; }
   .index-main__trouble {
+    margin-top: 2rem;
     padding: 0 1rem; }
     .index-main__trouble__title {
       font-size: 8vw; }
@@ -218,12 +228,9 @@ a {
       font-size: 3vw; }
     .index-main__trouble__contents {
       margin-top: 10%;
-      font-size: 4vw;
-      text-align: center; }
+      font-size: 4vw; }
   .index-main__search {
-    position: fixed;
-    top: 50%;
-    left: 10%;
+    margin: 2.5rem auto 0;
     width: 80%; }
     .index-main__search__induction {
       text-align: center; }
@@ -248,21 +255,56 @@ a {
         transition: 0.2s; }
 
 .select-main {
-  background-color: #204b37;
-  color: #000;
-  margin: 1rem;
-  padding: 1.5rem;
-  -webkit-box-shadow: 0 0 5px #000;
-          box-shadow: 0 0 5px #000; }
-  .select-main__container {
-    background-color: #fff;
-    -webkit-box-shadow: 0 0 8px #000;
-            box-shadow: 0 0 8px #000; }
+  color: #fff;
+  margin: 1rem; }
+  .select-main__container__box {
+    padding: 1rem;
+    border: solid 5px #fff; }
+    .select-main__container__box__item {
+      padding-bottom: 1rem;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      text-align: right; }
+      .select-main__container__box__item__title {
+        width: 20%;
+        padding-right: 1rem; }
+      .select-main__container__box__item__select {
+        width: 70%; }
+  .select-main__container__next {
+    margin: 2rem auto 0;
+    display: block;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    height: 50px;
+    width: 120px;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: bold;
+    color: #000;
+    line-height: 50px;
+    background-color: #fce300;
+    border-radius: 120px;
+    border: none; }
+    .select-main__container__next:hover {
+      background-color: rgba(255, 238, 0, 0.9);
+      -webkit-transition: 0.2s;
+      transition: 0.2s; }
 
 .result-main {
   height: 100vh;
-  margin-top: 2rem;
+  margin-top: 4rem;
   text-align: center; }
+  .result-main h2 {
+    margin: 0 20px;
+    font-size: 2rem;
+    border-bottom: 4px solid #078080; }
+  .result-main .maker {
+    margin-top: 3rem; }
+  .result-main .car-name {
+    font-size: 1.3rem; }
   .result-main .slider {
     width: 80%;
     margin: 0 auto; }
