--- a/css/style.scss
+++ b/css/style.scss
@@ -9,14 +9,18 @@
   background-repeat: no-repeat;
   background-position: center;
 }
-.result-body {
+.special-body {
   background-color: rgb(10,184,183)!important;
 }
 
 // ================================
-// 登録・ログインのヘッダー
+// classic-header.php
 // ================================
 .info-header {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  width: 100%;
   background-color: rgb(7, 128, 128);
   padding: 1rem 0;
   &__container {
@@ -31,9 +35,13 @@
   }
 }
 // ================================
-// 主ページのヘッダー
+// home-header.php
 // ================================
 .header {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  width: 100%;
   padding: 0.8rem 0.8rem;
   background-color: rgb(7, 128, 128);
   &__container {
@@ -125,8 +133,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5rem;
     &__title {
-      margin-top: 3rem;
       margin-bottom: 1rem;
       font-size: 7vw;
     }
@@ -246,6 +254,7 @@
   color: $main-color;
   margin: 1rem;
   &__container {
+    padding-top: 7rem;
     &__box {
       padding: 1rem;
       border: solid 5px $main-color;
@@ -289,7 +298,7 @@
 // ================================
 .result-main {
   height: 100vh;
-  margin-top: 4rem;
+  margin-top: 6rem;
   text-align: center;
   h2 {
     margin: 0 20px;
@@ -345,6 +354,23 @@
 // about.php
 // ================================
 .about-main {
+  margin: 0 1rem;
+  &__container {
+    &__title {
+      font-size: 2rem;
+      padding-top: 6rem;
+      padding-bottom: 2rem;
+      text-align: center;
+    }
+    &__box {
+      &__subTitle {
+        font-size: 1.3rem;
+      }
+      &__text {
+
+      }
+    }
+  }
 }
 
 // ================================
