--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,9 @@ a {
     .result-main .slider .slick-prev::before,
     .result-main .slider .slick-next::before {
       color: black !important; }
+  .result-main .not-find {
+    font-size: 1.5rem;
+    margin-top: 3rem; }
   .result-main .search {
     -webkit-user-select: none;
        -moz-user-select: none;
