--- a/css/style.scss
+++ b/css/style.scss
@@ -327,6 +327,10 @@
       color: black !important;
     }
   }
+  .not-find {
+    font-size: 1.5rem;
+    margin-top: 3rem;
+  }
   .search {
     user-select: none;
     display: block;
