--- a/css/style.scss
+++ b/css/style.scss
@@ -86,7 +86,7 @@
       .welcom {
         padding-top: 4rem;
       }
-      :nth-child(5) {
+      .close {
         font-size: 1.5rem;
         margin-top: 10rem;
         padding-bottom: 2rem;
