--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ a {
   .result-main .car-price {
     margin-bottom: 1rem; }
   .result-main .slider {
-    width: 80%;
+    width: 70%;
     margin: 0 auto; }
     .result-main .slider .oneCar {
       width: 100%; }
@@ -309,7 +309,7 @@ a {
         -ms-user-select: none;
             user-select: none;
     display: block;
-    width: 80%;
+    width: 70%;
     height: 40px;
     text-align: center;
     margin: 5rem auto 3rem;
@@ -341,6 +341,8 @@ a {
         font-size: 1.3rem; }
       .about-main__container__box__text {
         list-style-position: inside; }
+  .about-main .link {
+    margin-top: 4rem; }
 
 footer {
   height: 70px;
