--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,9 @@ a {
         list-style: none; }
       .result-main .slider .oneCar img {
         width: 200px;
-        margin: 0 auto; }
+        margin: 0 auto;
+        -webkit-box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
+                box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3); }
     .result-main .slider .slick-prev::before,
     .result-main .slider .slick-next::before {
       color: black !important; }
