--- a/css/style.scss
+++ b/css/style.scss
@@ -296,6 +296,7 @@
       img {
         width: 200px;
         margin: 0 auto;
+        box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.3);
       }
     }
     .slick-prev::before,
