--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a {
 .body {
   width: 100%;
   height: 100vh;
-  background-image: url("../img 2/sp_bg.jpg");
+  background-image: url("../image/sp_bg.jpg");
   background-size: cover;
   background-blend-mode: lighten;
   background-repeat: no-repeat;
